--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "url": "https://github.com/spatineo/sofp-mock-backend/issues"
   },
   "homepage": "https://github.com/spatineo/sofp-mock-backend#readme",
+  "contributors": [
+    {
+      "name": "Sampo Savolainen",
+      "email": "sampo.savolainen@spatineo.com"
+    }
+  ],
   "dependencies": {
-    "express": "~4.16.3"
   },
   "devDependencies": {
-    "nodemon": "~1.18.3",
     "jest": "~23.6.0",
     "typescript": "~2.9.2",
     "@types/node": "~10.9.3",
