--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "~10.9.3",
     "ts-node": "~7.0.1",
     "@types/jest": "~23.3.1",
-    "ts-jest": "~23.1.4"
+    "ts-jest": "~23.1.4",
+    "@types/lodash": "4.14.116"
   }
 }
