--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "nodemon": "~1.18.10",
     "ts-jest": "~23.1.4",
     "ts-node": "~7.0.1",
-    "typescript": "~2.9.2"
+    "typescript": "^3.2.4"
   }
 }
