--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sofp-example-backend",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Example backend for sofp-core, showing how integration and packaging is achieved",
   "main": "dist/index.js",
   "sofp-backend": "SofpExampleBackend",
@@ -30,8 +30,8 @@
   ],
   "dependencies": {
     "@types/yargs": "12.0.2",
-    "lodash": "~4.17.11",
-    "sofp-lib": "0.3.2"
+    "lodash": "^4.17.15",
+    "sofp-lib": "0.3.3"
   },
   "devDependencies": {
     "@types/jest": "~23.3.1",
