--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sofp-example-backend",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Example backend for sofp-core, showing how integration and packaging is achieved",
   "main": "dist/index.js",
   "sofp-backend": "SofpExampleBackend",
@@ -29,18 +29,18 @@
     }
   ],
   "dependencies": {
-    "@types/yargs": "12.0.2",
-    "lodash": "^4.17.15",
-    "sofp-lib": "0.4.0"
+    "lodash": "^4.17.19",
+    "sofp-lib": "0.5.0"
   },
   "devDependencies": {
-    "@types/jest": "~23.3.1",
-    "@types/lodash": "4.14.116",
+    "@types/jest": "~25.1.5",
+    "@types/lodash": "4.14.158",
     "@types/node": "~10.9.3",
-    "jest": "^24.3.1",
-    "nodemon": "~1.18.10",
-    "ts-jest": "~23.1.4",
-    "ts-node": "~7.0.1",
-    "typescript": "3.2.4"
+    "@types/yargs": "12.0.2",
+    "jest": "~25.5.4",
+    "nodemon": "^2.0.4",
+    "ts-jest": "~25.5.1",
+    "ts-node": "~8.10.2",
+    "typescript": "~3.9.7"
   }
 }
