--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   ],
   "dependencies": {
     "lodash": "^4.17.19",
-    "sofp-lib": "0.5.0"
+    "sofp-lib": "^0.5.2"
   },
   "devDependencies": {
     "@types/jest": "~25.1.5",
